# Recomendae

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
config/: .env.ci  .env.dev  .env.prod
docs/atas/: Ata 18_05
